# flac-converter

./: .gitignore  LICENSE  README.md  pyproject.toml
flac_converter/: __main__.py  main.py
tests/: test_main.py
